syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.grpc.trace";
option java_outer_classname = "CustomMetricProto";
option objc_class_prefix = "PIN";

package v1;


message PCustomMetricMessage {
    oneof field {
        PCustomMetric customMetric = 1;
        PCustomMetricBatch customMetricBatch = 2;
    }
}

message PCustomMetric {
    repeated PCustomIntMetric intMetric = 1;
    repeated PCustomLongMetric longMetric = 2;
    repeated PCustomDoubleMetric doubleMetric = 3;
}

message PCustomMetricBatch {
    repeated PCustomMetric customMetric = 1;
}

message PCustomIntMetric {
    int32 index = 1;
    int32 value = 2;
    google.protobuf.StringValue metricName = 3;
}

message PCustomLongMetric {
    int32 index = 1;
    int64 value = 2;
    google.protobuf.StringValue metricName = 3;
}

message PCustomDoubleMetric {
    int32 index = 1;
    double value = 2;
    google.protobuf.StringValue metricName = 3;
}
